# weetags

./: .gitignore  README.md  asgi.py  configs.yaml.example  pyproject.toml  setup.py
tests/: data.py  test_auth.py  test_tree.py
weetags/: exceptions.py  main.py  params_handler.py  tree.py  tree_builder.py  utils.py
weetags/app/: authentication.py  main.py  middlewares.py  params_handler.py  routes.py  utils.py
weetags/app/authentication/: authentication.py  schema.py
weetags/app/routes/: base.py  errors.py  login.py  middlewares.py  records.py  show.py  writer.py
weetags/database/: db.py  namespace.py  table.py
weetags/engine/: engine.py  schema.py  sql.py
weetags/routes/: errors.py  login.py  middlewares.py  reader.py  writer.py
weetags/tools/: authentication.py  loaders.py  parsers.py
weetags/trees/: db.py  permanent_tree.py  tree.py  treeBuilder.py  tree_builder.py  tree_schema.py
